--- a/notes/templates/notes/note_list.html
+++ b/notes/templates/notes/note_list.html
@@ -11,13 +11,38 @@ h4 {
     position: absolute;
     right: 5px;
 }
-
 </style>
 
     <div class="text-center mt-3">
-        <h3>To-Do List</h3>
+        <h2>To-Do List
+        <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <i class="fas fa-plus fa-sm"></i>
+        </a>
+        </h2>
     </div>
     <hr />
+
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <form method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_title">Title</label>
+                    {{ form.title }}
+                </div>
+                <div class="form-group">
+                    <label for="id_due_date">Due Date</label>
+                    {{ form.due_date }}
+                </div>
+                <div class="form-group form-check">
+                    <label for="id_label">Label</label>
+                    {{ form.label }}
+                </div>
+                <button type="submit" class="btn btn-primary">Create</button>
+            </form>
+        </div>
+    </div>
+
     <div class="row">
         {% for note in to_do_list %}
         <div class="col-12">
@@ -38,7 +63,7 @@ h4 {
         {% endfor %}
     </div>
     <div class="text-center mt-3">
-        <h3>Finished List</h3>
+        <h2>Finished List</h2>
     </div>
     <hr />
     <div class="row">
