Add authentication, login required

--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-    <p><h3>Log in to your account</h3></p>
+    <p><h3>Register</h3></p>
     <hr />
 
     <form method="POST" action="" class="form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Log In</button>
+        <button type="submit" class="btn btn-primary">Register</button>
 
         <input type="hidden" name="next" value="{% url 'note-list' %}" />
     </form>
