--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -20,22 +20,17 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'note-list' %}">Home <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
     <ul class="navbar-nav ml-auto">
       {% if user.is_authenticated %}
           <li class="nav-item">
-              <span class="navbar-text">Hello, {{ user.username }}!</span>
+              <span class="navbar-text">Hello, {{ user.username.title }}!</span>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
           </li>
       {% else %}
           <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
+              <a class="nav-link" href="{% url 'users:register' %}">Register</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'users:login' %}">Log in</a>
